@@ -6,6 +6,10 @@ Manuel M. T. Chakravarty <chak@cse.unsw.edu.au>
 (c2hs and some sources and techniques)
 
 Jens Petersen <petersen@haskell.org>
+(RPMs and tons of other stuff)
+
+Duncan Coutts <duncan@coutts.uklinux.net>
+(GtkSourceView)
 
 Jonas Svensson <d99josve@dtek.chalmers.se>
 Vincenzo Ciancia <ciancia@cli.di.unipi.it>
